Expondo nosso serviço na Controller

--- a/grade-curricular/src/main/resources/application.properties
+++ b/grade-curricular/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+server.servlet.context-path=/escola
+spring.datasource.url=jdbc:h2:mem:rasmoo
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#faz com que o banco feche as transações na camada de serviço
+spring.jpa.open-in-view=false
