Criação da controller matéria

--- a/grade-curricular/src/main/resources/application.properties
+++ b/grade-curricular/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+server.port=8081
+server.servlet.context-path=/grade-curricular
+
+spring.datasource.url=jdbc:h2:men:rasmoo
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.data-username=josa
+spring.datasource.data-password=josa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
