--- a/grade-curricular/src/main/resources/application.properties
+++ b/grade-curricular/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 server.port=8081
-server.servlet.context-path=/grade-curricular
+server.servlet.context-path=/
 
-spring.datasource.url=jdbc:h2:men:rasmoo
+spring.datasource.url=jdbc:h2:mem:rasmoo
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.data-username=josa
 spring.datasource.data-password=josa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.jpa.show-sql=true
